Sigil-1.4.1
    Bug Fixes:
      - critical bug fix for *over* xml encoding html used inside metadata in the opf
      - return use of ctrl-f to its long standing functionality

Sigil-1.4.0
    New Features:
      - Two different types of Multiple Language Spellchecking support added:
          - A user can now specify a Primary and a Secondary Language dictionary 
               for real-time spellchecking (red squiggley underline).
          - The Spellcheck Dialog will now support spell checking as determined by
               xml:lang and lang attributes in any languages with dictionaries
      - Main UI icons now use scalable svg files to better serve higher res displays.
        All provided by BeckyEbook (ala BeckyDTP).  A huge Thank You! to BeckyEbook
      - New brighter Sigil Application Icon is now being used.
      - Alternate Sigil main Application Icon now available as a build-time option
      - Sigil now provides 3 different Icon Themes for the user: Main, Fluent, and Material
           Again all thanks goes to BeckyEbook for creating/collecting all of the icon themes!
      - Sigil will now support a custom user-determined Icon theme via a custom .rcc file.
          - pre-made icon themes for Legacy and Material themes in different base colors 
            are now available with more user-contributed theme files to hopefully come.
            Again Thank BeckyEbook!
      - New main toolbar icons are now available and improved icon groupings have
          been made to provide the user with a greater degree of toolbar customization.
          Users may need to drag and drop icon grouping and modfy their selections of Toolbars
          to see some of these new options.
      - Improved support for IRI (international) hrefs.  OPF newly added file manifest ids 
          now converted to plain ascii to prevent issues with older readers

    Bug Fixes:
      - Fix bugs in Marking for Index