@@ -1,3 +1,10 @@
+Sigil-1.4.2
+    Bug Fixes:
+      - fix bug in "Add Existing" files when file names would require percent encoding
+      - fix bug in multiple language spellchecking dialog word lookup 
+            when no language attributes used
+      - update de, nl, sv, ko, ru translations that missed the Sigil 1.4.0 initial release
+
 Sigil-1.4.1
     Bug Fixes:
       - critical bug fix for *over* xml encoding html used inside metadata in the opf
